components/header/Header.module.css
.container {
  position: sticky;
  top: 0;
  z-index: 1000;
}

.container_menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #fff;
  padding: 0 16px;
  background-color: rgba(0, 0, 0);

  @media (min-width: 768px) {
    padding: 0 16px;
    backdrop-filter: blur(5px);
    background-color: rgba(0, 0, 0, 0.1);
  }
}

.menu_mobile {
  @media (min-width: 768px) {
    display: none;
  }
}

.logo {
  width: 50px;
  height: 40px;
  margin: 8px 0;

  @media (min-width: 768px) {
    display: none;
  }
}

.login {
  @media (min-width: 768px) {
    display: none;
  }
}

.logo_large {
  padding: 8px 0;

  @media (max-width: 768px) {
    display: none;
  }
}

.menu_desktop {
  @media (max-width: 768px) {
    display: none;
  }
}

.menu_desktop ul {
  display: flex;
  gap: 16px;
}

